--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,23 @@
-language: go
+language: php
 
-go:
-  - 1.3
-  - tip
+sudo: false
+
+php:
+  - 5.6
+
+before_install:
+  - composer self-update
+
+install:
+  - composer install
+
+script:
+  - bin/dev-phpunit
+
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: bin/live-deploy
+  on:
+    branch: master
+    tags: true
